// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable -composite table render table has tool 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name1"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name2"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name3"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name4"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name5"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name6"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name7"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name8"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name9"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name10"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name11"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name12"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name13"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name14"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name15"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name16"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name17"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name18"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name19"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name20"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 50 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -composite table render table has toolbar children 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                tool children node
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm actiontech-table-setting-namespace basic-button-wrapper css-geipcv"
                  style="padding: 0px 6px 0px 8px;"
                  type="button"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center css-1nt49ug"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 5px;"
                    >
                      <svg
                        class="custom-icon custom-icon-setting"
                        height="11"
                        viewBox="0 0 13 11"
                        width="13"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M.167 8.5H4.25v1.167H.167zm0-4.083h5.25v1.166H.167zm0-4.084h11.666V1.5H.167zM11.06 5.598l.674-.228.584 1.01-.535.47c.067.319.067.648 0 .967l.535.47-.584 1.01-.674-.228c-.24.216-.524.382-.837.484l-.14.697H8.917l-.14-.698a2.3 2.3 0 0 1-.837-.484l-.674.229-.583-1.01.534-.47a2.3 2.3 0 0 1 0-.967l-.534-.47.583-1.01.674.228c.24-.216.524-.382.837-.484l.14-.697h1.166l.14.697c.313.102.598.269.837.485zM9.5 8.5a1.167 1.167 0 1 0 0-2.333 1.167 1.167 0 0 0 0 2.333"
                        />
                      </svg>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 5px;"
                    >
                      表格设置
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        class="custom-icon custom-icon-arrow-down"
                        color="currentColor"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name1"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name2"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name3"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name4"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name5"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name6"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name7"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name8"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name9"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name10"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name11"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name12"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name13"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name14"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name15"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name16"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name17"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name18"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name19"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name20"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 50 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -composite table render table with class name 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace custom-class-table-test css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -composite table render table with filter 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name1"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name2"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name3"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name4"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name5"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name6"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name7"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name8"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name9"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name10"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name11"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name12"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name13"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name14"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name15"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name16"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name17"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name18"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name19"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name20"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 50 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render normal table is empty 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render normal table is error info 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render normal table is loading 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-bj9uhl"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render table with no pagination 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        名称
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        年龄
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="a"
                    >
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="b"
                    >
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="c"
                    >
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render table with pagination 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name1"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name2"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name3"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name4"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name5"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name6"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name7"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name8"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name9"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name10"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name11"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name12"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name13"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name14"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name15"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name16"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name17"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name18"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name19"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name20"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 50 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable -normal table render table with pagination 2`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name21"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name22"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name23"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name24"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name25"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name26"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name27"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name28"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name29"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name30"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name31"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name32"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name33"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name34"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name35"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name36"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name37"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name38"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name39"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="name40"
                    >
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 50 条数据
              </span>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-prev"
              tabindex="0"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
